Update meta tags for improved SEO optimization

--- a/knowyourdiseases/GBS.html
+++ b/knowyourdiseases/GBS.html
@@ -13,6 +13,22 @@
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Guillain barre syndrome Doctor,GBS Doctor, குய்லின்-பாரே நோய்">
     <meta name="description" content="Guillain-Barré சிண்ட்ரோம் அல்லது 'GBS' என்பது லேசான அல்லது கடுமையான தசை பலவீனத்தை ஏற்படுத்தும் ஒரு நிலை. பல்வேறு வகையான ஜிபிஎஸ் உள்ளன. மிகவும் பொதுவான வகை 'Acute Inflammatory Demyelinating Polyneuropathy' அல்லது 'AIDP' என்று அழைக்கப்படுகிறது. குழந்தைகள் மற்றும் பெரியவர்கள் இருவரும் ஜிபிஎஸ் பெறலாம்." />
     <base href="/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="குய்லின்-பாரே நோய் (Guillain barre syndrome/ GBS) | Dr. Arun Gokul Pon">
+    <meta property="og:site_name" content="AGP Neuro Clinic">
+    <meta property="og:url" content="https://agpneuroclinic.com/knowyourdiseases/GBS.html"> 
+    <meta property="og:description" content="Guillain-Barré சிண்ட்ரோம் அல்லது 'GBS' என்பது லேசான அல்லது கடுமையான தசை பலவீனத்தை ஏற்படுத்தும் ஒரு நிலை. பல்வேறு வகையான ஜிபிஎஸ் உள்ளன. மிகவும் பொதுவான வகை 'Acute Inflammatory Demyelinating Polyneuropathy' அல்லது 'AIDP' என்று அழைக்கப்படுகிறது. குழந்தைகள் மற்றும் பெரியவர்கள் இருவரும் ஜிபிஎஸ் பெறலாம்.">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://agpneuroclinic.com/img/logo.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://agpneuroclinic.com/knowyourdiseases/GBS.html">
+    <meta property="twitter:title" content="குய்லின்-பாரே நோய் (Guillain barre syndrome/ GBS) | Dr. Arun Gokul Pon">
+    <meta property="twitter:description" content="Guillain-Barré சிண்ட்ரோம் அல்லது 'GBS' என்பது லேசான அல்லது கடுமையான தசை பலவீனத்தை ஏற்படுத்தும் ஒரு நிலை. பல்வேறு வகையான ஜிபிஎஸ் உள்ளன. மிகவும் பொதுவான வகை 'Acute Inflammatory Demyelinating Polyneuropathy' அல்லது 'AIDP' என்று அழைக்கப்படுகிறது. குழந்தைகள் மற்றும் பெரியவர்கள் இருவரும் ஜிபிஎஸ் பெறலாம்.">
+    <meta property="twitter:image" content="https://agpneuroclinic.com/img/logo.png">
+
     <style>
         img.wp-smiley,
         img.emoji {
