--- a/knowyourdiseases/bells-palsy.html
+++ b/knowyourdiseases/bells-palsy.html
@@ -13,6 +13,22 @@
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Bells palsy Doctor,Bells palsy,பெல்ஸ் பால்சி">
     <meta name="description" content="பெல்ஸ் பால்சி என்பது ஒரு நபரின் முகத்தின் ஒரு பக்கம் பலவீனமாக அல்லது தொய்வடையச் செய்யும் ஒரு நிலை. முகத்தில் உள்ள தசைகளைக் கட்டுப்படுத்தும் நரம்புகளில் ஒன்று சேதமடையும் போது அல்லது வேலை செய்வதை நிறுத்தும்போது இது நிகழலாம். நரம்பு வீக்கமடையும் போது பொதுவாக இந்த நரம்புக்கு சேதம் ஏற்படுகிறது. பெல்ஸ் பால்ஸி உள்ள பெரும்பாலான மக்கள் முழுமையாக குணமடைகின்றனர். ஆனால் சிலருக்கு வாழ்நாள் முழுவதும் பெல்ஸ் பால்சி அறிகுறிகள் இருக்கும்." />
     <base href="/">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="பெல்ஸ் பால்சி (Bells palsy) | Dr. Arun Gokul Pon">
+    <meta property="og:site_name" content="AGP Neuro Clinic">
+    <meta property="og:url" content="https://agpneuroclinic.com/knowyourdiseases/dementia.html"> 
+    <meta property="og:description" content="பெல்ஸ் பால்சி என்பது ஒரு நபரின் முகத்தின் ஒரு பக்கம் பலவீனமாக அல்லது தொய்வடையச் செய்யும் ஒரு நிலை. முகத்தில் உள்ள தசைகளைக் கட்டுப்படுத்தும் நரம்புகளில் ஒன்று சேதமடையும் போது அல்லது வேலை செய்வதை நிறுத்தும்போது இது நிகழலாம். நரம்பு வீக்கமடையும் போது பொதுவாக இந்த நரம்புக்கு சேதம் ஏற்படுகிறது. பெல்ஸ் பால்ஸி உள்ள பெரும்பாலான மக்கள் முழுமையாக குணமடைகின்றனர். ஆனால் சிலருக்கு வாழ்நாள் முழுவதும் பெல்ஸ் பால்சி அறிகுறிகள் இருக்கும்.">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://agpneuroclinic.com/img/knowyourdiseases/bellspalsy.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://agpneuroclinic.com/knowyourdiseases/dementia.html">
+    <meta property="twitter:title" content="பெல்ஸ் பால்சி (Bells palsy) | Dr. Arun Gokul Pon">
+    <meta property="twitter:description" content="பெல்ஸ் பால்சி என்பது ஒரு நபரின் முகத்தின் ஒரு பக்கம் பலவீனமாக அல்லது தொய்வடையச் செய்யும் ஒரு நிலை. முகத்தில் உள்ள தசைகளைக் கட்டுப்படுத்தும் நரம்புகளில் ஒன்று சேதமடையும் போது அல்லது வேலை செய்வதை நிறுத்தும்போது இது நிகழலாம். நரம்பு வீக்கமடையும் போது பொதுவாக இந்த நரம்புக்கு சேதம் ஏற்படுகிறது. பெல்ஸ் பால்ஸி உள்ள பெரும்பாலான மக்கள் முழுமையாக குணமடைகின்றனர். ஆனால் சிலருக்கு வாழ்நாள் முழுவதும் பெல்ஸ் பால்சி அறிகுறிகள் இருக்கும்.">
+    <meta property="twitter:image" content="https://agpneuroclinic.com/img/knowyourdiseases/bellspalsy.png">
+    
     <style>
         img.wp-smiley,
         img.emoji {
