--- a/knowyourdiseases/dementia.html
+++ b/knowyourdiseases/dementia.html
@@ -13,6 +13,22 @@
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Dementia Doctor,மறதி நோய் அல்லது டிமென்ஷியா">
     <meta name="description" content="டிமென்ஷியா என்பது நினைவாற்றல் பிரச்சினைகளை ஏற்படுத்தும் மூளைக் கோளாறுகளின் ஒரு பொதுவான சொல்." />
     <base href="/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="மறதி நோய் அல்லது டிமென்ஷியா (Dementia) | Dr. Arun Gokul Pon">
+    <meta property="og:site_name" content="AGP Neuro Clinic">
+    <meta property="og:url" content="https://agpneuroclinic.com/knowyourdiseases/dementia.html"> 
+    <meta property="og:description" content="டிமென்ஷியா என்பது நினைவாற்றல் பிரச்சினைகளை ஏற்படுத்தும் மூளைக் கோளாறுகளின் ஒரு பொதுவான சொல்.">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://agpneuroclinic.com/img/logo.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://agpneuroclinic.com/knowyourdiseases/dementia.html">
+    <meta property="twitter:title" content="மறதி நோய் அல்லது டிமென்ஷியா (Dementia) | Dr. Arun Gokul Pon">
+    <meta property="twitter:description" content="டிமென்ஷியா என்பது நினைவாற்றல் பிரச்சினைகளை ஏற்படுத்தும் மூளைக் கோளாறுகளின் ஒரு பொதுவான சொல்.">
+    <meta property="twitter:image" content="https://agpneuroclinic.com/img/logo.png">
+
     <style>
         img.wp-smiley,
         img.emoji {
