--- a/knowyourdiseases/neuropathic.html
+++ b/knowyourdiseases/neuropathic.html
@@ -13,6 +13,22 @@
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Neuropathic Doctor,நரம்பியல் வலி">
     <meta name="description" content="நரம்பியல் வலி என்பது நரம்பு பாதிப்பு அல்லது நரம்பு மண்டலத்தில் ஏற்படும் பிரச்சனையால் ஏற்படும் ஒரு வகை வலி." />
     <base href="/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="நரம்பியல் வலி (Neuropathic pain) | Dr. Arun Gokul Pon">
+    <meta property="og:site_name" content="AGP Neuro Clinic">
+    <meta property="og:url" content="https://agpneuroclinic.com/knowyourdiseases/neuropathic.html"> 
+    <meta property="og:description" content="நரம்பியல் வலி என்பது நரம்பு பாதிப்பு அல்லது நரம்பு மண்டலத்தில் ஏற்படும் பிரச்சனையால் ஏற்படும் ஒரு வகை வலி.">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://agpneuroclinic.com/img/knowyourdiseases/neuropathy.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://agpneuroclinic.com/knowyourdiseases/neuropathic.html">
+    <meta property="twitter:title" content="நரம்பியல் வலி (Neuropathic pain) | Dr. Arun Gokul Pon">
+    <meta property="twitter:description" content="நரம்பியல் வலி என்பது நரம்பு பாதிப்பு அல்லது நரம்பு மண்டலத்தில் ஏற்படும் பிரச்சனையால் ஏற்படும் ஒரு வகை வலி.">
+    <meta property="twitter:image" content="https://agpneuroclinic.com/img/knowyourdiseases/neuropathy.png">
+
     <style>
         img.wp-smiley,
         img.emoji {
