--- a/knowyourdiseases/neuropathy.html
+++ b/knowyourdiseases/neuropathy.html
@@ -13,6 +13,22 @@
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Diabetic Neuropathy Doctor,சர்க்கரை நோயினால் நரம்பு தளர்ச்சி">
     <meta name="description" content="ஆம். உங்கள் இரத்த சர்க்கரை நீண்ட காலமாக அதிகமாக இருந்தால் நரம்பு சேதத்தை ஏற்படுத்தும். சர்க்கரை நோய் உள்ளவர்கள் பல்வேறு வகையான நரம்பு பாதிப்புகளை சந்திக்க நேரிடும்." />
     <base href="/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="சர்க்கரை நோயினால் நரம்பு தளர்ச்சி (Diabetic Neuropathy) | Dr. Arun Gokul Pon">
+    <meta property="og:site_name" content="AGP Neuro Clinic">
+    <meta property="og:url" content="https://agpneuroclinic.com/knowyourdiseases/neuropathy.html"> 
+    <meta property="og:description" content="ஆம். உங்கள் இரத்த சர்க்கரை நீண்ட காலமாக அதிகமாக இருந்தால் நரம்பு சேதத்தை ஏற்படுத்தும். சர்க்கரை நோய் உள்ளவர்கள் பல்வேறு வகையான நரம்பு பாதிப்புகளை சந்திக்க நேரிடும்.">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://agpneuroclinic.com/img/knowyourdiseases/neuropathy.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://agpneuroclinic.com/knowyourdiseases/neuropathy.html">
+    <meta property="twitter:title" content="சர்க்கரை நோயினால் நரம்பு தளர்ச்சி (Diabetic Neuropathy) | Dr. Arun Gokul Pon">
+    <meta property="twitter:description" content="ஆம். உங்கள் இரத்த சர்க்கரை நீண்ட காலமாக அதிகமாக இருந்தால் நரம்பு சேதத்தை ஏற்படுத்தும். சர்க்கரை நோய் உள்ளவர்கள் பல்வேறு வகையான நரம்பு பாதிப்புகளை சந்திக்க நேரிடும்.">
+    <meta property="twitter:image" content="https://agpneuroclinic.com/img/knowyourdiseases/neuropathy.png">
+
     <style>
         img.wp-smiley,
         img.emoji {
