--- a/knowyourdiseases/parkinsons.html
+++ b/knowyourdiseases/parkinsons.html
@@ -13,6 +13,22 @@
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Parkinson's Doctor,பார்கின்சன் நோய்">
     <meta name="description" content="நடுக்குவாதம் அல்லது பார்கின்சன் நோய் (Parkinson's disease) அல்லது பீ.டி என்பது மைய நரம்பு மண்டலத்தைச் சிதைக்கின்ற ஒரு நோய் ஆகும், பொதுவாக இந்த நோயால் பாதிக்கப்பட்டவர்களின் இயக்கத்திறன்கள் (Movements), பேச்சு மற்றும் மற்ற செயல்பாடுகள் சீராக இயங்கமாட்டாது." />
     <base href="/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="பார்கின்சன் நோய் (Parkinson's disease) | Dr. Arun Gokul Pon">
+    <meta property="og:site_name" content="AGP Neuro Clinic">
+    <meta property="og:url" content="https://agpneuroclinic.com/knowyourdiseases/parkinsons.html"> 
+    <meta property="og:description" content="நடுக்குவாதம் அல்லது பார்கின்சன் நோய் (Parkinson's disease) அல்லது பீ.டி என்பது மைய நரம்பு மண்டலத்தைச் சிதைக்கின்ற ஒரு நோய் ஆகும், பொதுவாக இந்த நோயால் பாதிக்கப்பட்டவர்களின் இயக்கத்திறன்கள் (Movements), பேச்சு மற்றும் மற்ற செயல்பாடுகள் சீராக இயங்கமாட்டாது.">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://agpneuroclinic.com/img/knowyourdiseases/parkinsons.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://agpneuroclinic.com/knowyourdiseases/parkinsons.html">
+    <meta property="twitter:title" content="பார்கின்சன் நோய் (Parkinson's disease) | Dr. Arun Gokul Pon">
+    <meta property="twitter:description" content="நடுக்குவாதம் அல்லது பார்கின்சன் நோய் (Parkinson's disease) அல்லது பீ.டி என்பது மைய நரம்பு மண்டலத்தைச் சிதைக்கின்ற ஒரு நோய் ஆகும், பொதுவாக இந்த நோயால் பாதிக்கப்பட்டவர்களின் இயக்கத்திறன்கள் (Movements), பேச்சு மற்றும் மற்ற செயல்பாடுகள் சீராக இயங்கமாட்டாது.">
+    <meta property="twitter:image" content="https://agpneuroclinic.com/img/knowyourdiseases/parkinsons.png">
+
     <style>
         img.wp-smiley,
         img.emoji {
