--- a/knowyourdiseases/seizures.html
+++ b/knowyourdiseases/seizures.html
@@ -11,8 +11,24 @@
     <meta name="revisit-after" content="14 days">
     <link rel="canonical" href="https://agpneuroclinic.com/knowyourdiseases/seizures.html" />
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Seizures Doctor,Epilepsy Doctor,வலிப்பு">
-    <meta name="description" content="மூளையில் ஏற்படும் அசாதாரண மின் செயல்பாடுகளால் வலிப்பு ஏற்படுகிறது.  கால்-கை வலிப்பு எந்த வயதிலும் தொடங்கலாம்." />
+    <meta name="description" content="மூளையில் ஏற்படும் அசாதாரண மின் செயல்பாடுகளால் வலிப்பு ஏற்படுகிறது. கால்-கை வலிப்பு எந்த வயதிலும் தொடங்கலாம்." />
     <base href="/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="வலிப்பு (Seizures/Epilepsy) | Dr. Arun Gokul Pon">
+    <meta property="og:site_name" content="AGP Neuro Clinic">
+    <meta property="og:url" content="https://agpneuroclinic.com/knowyourdiseases/seizures.html"> 
+    <meta property="og:description" content="மூளையில் ஏற்படும் அசாதாரண மின் செயல்பாடுகளால் வலிப்பு ஏற்படுகிறது. கால்-கை வலிப்பு எந்த வயதிலும் தொடங்கலாம்.">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://agpneuroclinic.com/img/knowyourdiseases/seizure.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://agpneuroclinic.com/knowyourdiseases/seizures.html">
+    <meta property="twitter:title" content="வலிப்பு (Seizures/Epilepsy) | Dr. Arun Gokul Pon">
+    <meta property="twitter:description" content="மூளையில் ஏற்படும் அசாதாரண மின் செயல்பாடுகளால் வலிப்பு ஏற்படுகிறது. கால்-கை வலிப்பு எந்த வயதிலும் தொடங்கலாம்.">
+    <meta property="twitter:image" content="https://agpneuroclinic.com/img/knowyourdiseases/seizure.png">
+
     <style>
         img.wp-smiley,
         img.emoji {
