--- a/knowyourdiseases/stroke.html
+++ b/knowyourdiseases/stroke.html
@@ -13,6 +13,22 @@
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Stroke Doctor,பக்கவாதம்">
     <meta name="description" content="பக்கவாதம் என்பது இரத்த ஓட்டத்தில் ஏற்படும் பிரச்சனையால் மூளையின் ஒரு பகுதி சேதமடைந்தால் மருத்துவர்கள் பயன்படுத்தும் சொல். பக்கவாதம் உள்ளவர்கள் முக்கியமான மூளை செயல்பாடுகளை இழக்க நேரிடும். உதாரணமாக, சிலருக்கு கை, கால் செயலிழக்கும் அல்லது பேச முடியாமல் போகும்." />
     <base href="/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="பக்கவாதம் (Stroke) | Dr. Arun Gokul Pon">
+    <meta property="og:site_name" content="AGP Neuro Clinic">
+    <meta property="og:url" content="https://agpneuroclinic.com/knowyourdiseases/stroke.html"> 
+    <meta property="og:description" content="பக்கவாதம் என்பது இரத்த ஓட்டத்தில் ஏற்படும் பிரச்சனையால் மூளையின் ஒரு பகுதி சேதமடைந்தால் மருத்துவர்கள் பயன்படுத்தும் சொல். பக்கவாதம் உள்ளவர்கள் முக்கியமான மூளை செயல்பாடுகளை இழக்க நேரிடும். உதாரணமாக, சிலருக்கு கை, கால் செயலிழக்கும் அல்லது பேச முடியாமல் போகும்.">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://agpneuroclinic.com/img/knowyourdiseases/stroke.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://agpneuroclinic.com/knowyourdiseases/stroke.html">
+    <meta property="twitter:title" content="பக்கவாதம் (Stroke) | Dr. Arun Gokul Pon">
+    <meta property="twitter:description" content="பக்கவாதம் என்பது இரத்த ஓட்டத்தில் ஏற்படும் பிரச்சனையால் மூளையின் ஒரு பகுதி சேதமடைந்தால் மருத்துவர்கள் பயன்படுத்தும் சொல். பக்கவாதம் உள்ளவர்கள் முக்கியமான மூளை செயல்பாடுகளை இழக்க நேரிடும். உதாரணமாக, சிலருக்கு கை, கால் செயலிழக்கும் அல்லது பேச முடியாமல் போகும்.">
+    <meta property="twitter:image" content="https://agpneuroclinic.com/img/knowyourdiseases/stroke.png">
+
     <style>
         img.wp-smiley,
         img.emoji {
