--- a/services.html
+++ b/services.html
@@ -12,6 +12,22 @@
     <link rel="canonical" href="https://agpneuroclinic.com/services.html" />
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Brain Doctor,Stroke,Fits,Epilepsy,Meningitis,Migraine">
     <meta name="description" content="Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Best Neurologist in Nagercoil | Dr. Arun Gokul Pon">
+    <meta property="og:site_name" content="AGP Neuro Clinic">
+    <meta property="og:url" content="https://agpneuroclinic.com/">
+    <meta property="og:description" content="Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://agpneuroclinic.com/img/logo.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://agpneuroclinic.com/">
+    <meta property="twitter:title" content="Best Neurologist in Nagercoil | AGP Neuro Clinic">
+    <meta property="twitter:description" content="Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages">
+    <meta property="twitter:image" content="https://agpneuroclinic.com/img/logo.png">
+    
     <style>
         img.wp-smiley,
         img.emoji {
