--- a/handout/home-vestibular-exercises.html
+++ b/handout/home-vestibular-exercises.html
@@ -11,8 +11,24 @@
     <meta name="revisit-after" content="14 days">
     <link rel="canonical" href="https://agpneuroclinic.com/handout/home-vestibular-exercises.html" />
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,BPPV Exercises,Home Vestibular Exercises,Vertigo Exercises">
-    <meta name="description" content="பக்கவாதம் என்பது இரத்த ஓட்டத்தில் ஏற்படும் பிரச்சனையால் மூளையின் ஒரு பகுதி சேதமடைந்தால் மருத்துவர்கள் பயன்படுத்தும் சொல். பக்கவாதம் உள்ளவர்கள் முக்கியமான மூளை செயல்பாடுகளை இழக்க நேரிடும். உதாரணமாக, சிலருக்கு கை, கால் செயலிழக்கும் அல்லது பேச முடியாமல் போகும்." />
+    <meta name="description" content="Exercises performed at home to improve balance and alleviate symptoms related to inner ear and vestibular system issues." />
     <base href="/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Home Vestibular Exercises | Dr. Arun Gokul Pon">
+    <meta property="og:site_name" content="AGP Neuro Clinic">
+    <meta property="og:url" content="https://agpneuroclinic.com/handout/home-vestibular-exercises.html"> 
+    <meta property="og:description" content="Exercises performed at home to improve balance and alleviate symptoms related to inner ear and vestibular system issues.">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://agpneuroclinic.com/img/logo.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://agpneuroclinic.com/handout/home-vestibular-exercises.html">
+    <meta property="twitter:title" content="Home Vestibular Exercises | Dr. Arun Gokul Pon">
+    <meta property="twitter:description" content="Exercises performed at home to improve balance and alleviate symptoms related to inner ear and vestibular system issues.">
+    <meta property="twitter:image" content="https://agpneuroclinic.com/img/logo.png">
+
     <style>
         img.wp-smiley,
         img.emoji {
