--- a/handout/neck-strengthening.html
+++ b/handout/neck-strengthening.html
@@ -11,8 +11,24 @@
     <meta name="revisit-after" content="14 days">
     <link rel="canonical" href="https://agpneuroclinic.com/handout/neck-strengthening.html" />
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Neck Pain,Exercises for Neck Strengthening">
-    <meta name="description" content="பக்கவாதம் என்பது இரத்த ஓட்டத்தில் ஏற்படும் பிரச்சனையால் மூளையின் ஒரு பகுதி சேதமடைந்தால் மருத்துவர்கள் பயன்படுத்தும் சொல். பக்கவாதம் உள்ளவர்கள் முக்கியமான மூளை செயல்பாடுகளை இழக்க நேரிடும். உதாரணமாக, சிலருக்கு கை, கால் செயலிழக்கும் அல்லது பேச முடியாமல் போகும்." />
+    <meta name="description" content="Movements focused on enhancing the muscles of the neck to improve strength, stability, and reduce strain." />
     <base href="/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Exercises for Neck Strengthening | Dr. Arun Gokul Pon">
+    <meta property="og:site_name" content="AGP Neuro Clinic">
+    <meta property="og:url" content="https://agpneuroclinic.com/handout/neck-strengthening.html"> 
+    <meta property="og:description" content="Movements focused on enhancing the muscles of the neck to improve strength, stability, and reduce strain.">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://agpneuroclinic.com/img/logo.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://agpneuroclinic.com/handout/neck-strengthening.html">
+    <meta property="twitter:title" content="Exercises for Neck Strengthening | Dr. Arun Gokul Pon">
+    <meta property="twitter:description" content="Movements focused on enhancing the muscles of the neck to improve strength, stability, and reduce strain.">
+    <meta property="twitter:image" content="https://agpneuroclinic.com/img/logo.png">
+
     <style>
         img.wp-smiley,
         img.emoji {
