--- a/knowyourdiseases/migraine.html
+++ b/knowyourdiseases/migraine.html
@@ -13,6 +13,22 @@
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Migraine Doctor,ஒற்றைத் தலைவலி">
     <meta name="description" content="ஒற்றைத் தலைவலி என்பது மற்ற அறிகுறிகளையும் உள்ளடக்கிய ஒரு வகையான தலைவலி. ஒற்றைத் தலைவலி பெரியவர்கள் மற்றும் குழந்தைகள் இருவரையும் பாதிக்கும். அவை ஆண்களை விட பெண்களில் அதிகம் காணப்படுகின்றன. ஒற்றைத் தலைவலி பெரும்பாலும் லேசாகத் தொடங்கி பின்னர் மோசமாகிவிடும்." />
     <base href="/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="ஒற்றைத் தலைவலி (Migraine) | Dr. Arun Gokul Pon">
+    <meta property="og:site_name" content="AGP Neuro Clinic">
+    <meta property="og:url" content="https://agpneuroclinic.com/knowyourdiseases/migraine.html"> 
+    <meta property="og:description" content="ஒற்றைத் தலைவலி என்பது மற்ற அறிகுறிகளையும் உள்ளடக்கிய ஒரு வகையான தலைவலி. ஒற்றைத் தலைவலி பெரியவர்கள் மற்றும் குழந்தைகள் இருவரையும் பாதிக்கும். அவை ஆண்களை விட பெண்களில் அதிகம் காணப்படுகின்றன. ஒற்றைத் தலைவலி பெரும்பாலும் லேசாகத் தொடங்கி பின்னர் மோசமாகிவிடும்.">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://agpneuroclinic.com/img/knowyourdiseases/migraine.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://agpneuroclinic.com/knowyourdiseases/migraine.html">
+    <meta property="twitter:title" content="ஒற்றைத் தலைவலி (Migraine) | Dr. Arun Gokul Pon">
+    <meta property="twitter:description" content="ஒற்றைத் தலைவலி என்பது மற்ற அறிகுறிகளையும் உள்ளடக்கிய ஒரு வகையான தலைவலி. ஒற்றைத் தலைவலி பெரியவர்கள் மற்றும் குழந்தைகள் இருவரையும் பாதிக்கும். அவை ஆண்களை விட பெண்களில் அதிகம் காணப்படுகின்றன. ஒற்றைத் தலைவலி பெரும்பாலும் லேசாகத் தொடங்கி பின்னர் மோசமாகிவிடும்.">
+    <meta property="twitter:image" content="https://agpneuroclinic.com/img/knowyourdiseases/migraine.png">
+
     <style>
         img.wp-smiley,
         img.emoji {
