Update favicon and shortcut icon links

--- a/about.html
+++ b/about.html
@@ -3423,6 +3423,8 @@
     <link rel="icon" href="/img/logo.png" sizes="32x32" />
     <link rel="icon" href="/img/logo.png" sizes="192x192" />
     <link rel="apple-touch-icon-precomposed" href="/img/logo.png" />
+    <link rel="shortcut icon" type="image/png" href="/img/logo.png">
+    <link type="image/x-icon" href="/img/logo.ico" rel="shortcut icon">
     <style id="wp-custom-css">
         body {
             color: #444;
