--- a/contact.html
+++ b/contact.html
@@ -3610,6 +3610,8 @@
     <link rel="icon" href="/img/logo.png" sizes="32x32" />
     <link rel="icon" href="/img/logo.png" sizes="192x192" />
     <link rel="apple-touch-icon-precomposed" href="/img/logo.png" />
+    <link rel="shortcut icon" type="image/png" href="/img/logo.png">
+    <link type="image/x-icon" href="/img/logo.ico" rel="shortcut icon">
     <script>function setREVStartSize(e) {
             try {
                 e.c = jQuery(e.c); var i = jQuery(window).width(), t = 9999, r = 0, n = 0, l = 0, f = 0, s = 0, h = 0;
