Update meta tags for improved SEO optimization

--- a/index.html
+++ b/index.html
@@ -4135,10 +4135,6 @@
                                             data-saveperformance="off" data-title="Slide" data-param1="" data-param2=""
                                             data-param3="" data-param4="" data-param5="" data-param6="" data-param7=""
                                             data-param8="" data-param9="" data-param10="" data-description="">
-                                            <!-- MAIN IMAGE -->
-                                            <img src="./img/main-banner3.jpeg" alt="" title="main-banner1" width="1920"
-                                                height="1028" data-bgposition="center center" data-bgfit="cover"
-                                                data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
                                             <!-- LAYERS -->
                                             <!-- LAYER NR. 1 -->
                                             <div class="tp-caption   tp-resizeme" id="slide-1-layer-3"
@@ -4362,58 +4358,58 @@
                                             <div class="slider">
                                                 <div class="slide-track">
                                                     <div class="slide">
-                                                        <img src="/img/carousel/IMG-20240615-WA0001.jpg" height="100" width="250" alt="" />
+                                                        <img src="/img/carousel/IMG-20240615-WA0001.jpg" height="100" width="250" alt="Interior | AGP Neuro Clinic" />
                                                     </div>
                                                     <div class="slide">
-                                                        <img src="/img/carousel/IMG-20240615-WA0002.jpg" height="100" width="250" alt="" />
+                                                        <img src="/img/carousel/IMG-20240615-WA0002.jpg" height="100" width="250" alt="Dispensary | AGP Neuro Clinic" />
                                                     </div>
                                                     <div class="slide">
-                                                        <img src="/img/carousel/IMG-20240615-WA0003.jpg" height="100" width="250" alt="" />
+                                                        <img src="/img/carousel/IMG-20240615-WA0003.jpg" height="100" width="250" alt="Dr. Arun Gokul Pon - Neurologist | AGP Neuro Clinic" />
                                                     </div>
                                                     <div class="slide">
-                                                        <img src="/img/carousel/IMG-20240615-WA0004.jpg" height="100" width="250" alt="" />
+                                                        <img src="/img/carousel/IMG-20240615-WA0004.jpg" height="100" width="250" alt="Pharmacy | AGP Neuro Clinic" />
                                                     </div>
                                                     <div class="slide">
-                                                        <img src="/img/carousel/IMG-20240615-WA0005.jpg" height="100" width="250" alt="" />
+                                                        <img src="/img/carousel/IMG-20240615-WA0005.jpg" height="100" width="250" alt="Consulting | AGP Neuro Clinic" />
                                                     </div>
                                                     <div class="slide">
-                                                        <img src="/img/carousel/IMG-20240615-WA0006.jpg" height="100" width="250" alt="" />
+                                                        <img src="/img/carousel/IMG-20240615-WA0006.jpg" height="100" width="250" alt="Consulting Check-Up | AGP Neuro Clinic" />
                                                     </div>
                                                     <div class="slide">
-                                                        <img src="/img/carousel/IMG-20240615-WA0001.jpg" height="100" width="250" alt="" />
+                                                        <img src="/img/carousel/IMG-20240615-WA0001.jpg" height="100" width="250" alt="Interior | AGP Neuro Clinic" />
                                                     </div>
                                                     <div class="slide">
-                                                        <img src="/img/carousel/IMG-20240615-WA0002.jpg" height="100" width="250" alt="" />
+                                                        <img src="/img/carousel/IMG-20240615-WA0002.jpg" height="100" width="250" alt="Dispensary | AGP Neuro Clinic" />
                                                     </div>
                                                     <div class="slide">
-                                                        <img src="/img/carousel/IMG-20240615-WA0003.jpg" height="100" width="250" alt="" />
+                                                        <img src="/img/carousel/IMG-20240615-WA0003.jpg" height="100" width="250" alt="Dr. Arun Gokul Pon - Neurologist | AGP Neuro Clinic" />
                                                     </div>
                                                     <div class="slide">
-                                                        <img src="/img/carousel/IMG-20240615-WA0004.jpg" height="100" width="250" alt="" />
+                                                        <img src="/img/carousel/IMG-20240615-WA0004.jpg" height="100" width="250" alt="Pharmacy | AGP Neuro Clinic" />
                                                     </div>
                                                     <div class="slide">
-                                                        <img src="/img/carousel/IMG-20240615-WA0005.jpg" height="100" width="250" alt="" />
+                                                        <img src="/img/carousel/IMG-20240615-WA0005.jpg" height="100" width="250" alt="Consulting | AGP Neuro Clinic" />
                                                     </div>
                                                     <div class="slide">
-                                                        <img src="/img/carousel/IMG-20240615-WA0006.jpg" height="100" width="250" alt="" />
+                                                        <img src="/img/carousel/IMG-20240615-WA0006.jpg" height="100" width="250" alt="Consulting Check-Up | AGP Neuro Clinic" />
                                                     </div>
                                                     <div class="slide">
-                                                        <img src="/img/carousel/IMG-20240615-WA0001.jpg" height="100" width="250" alt="" />
+                                                        <img src="/img/carousel/IMG-20240615-WA0001.jpg" height="100" width="250" alt="Interior | AGP Neuro Clinic" />
                                                     </div>
                                                     <div class="slide">
-                                                        <img src="/img/carousel/IMG-20240615-WA0002.jpg" height="100" width="250" alt="" />
+                                                        <img src="/img/carousel/IMG-20240615-WA0002.jpg" height="100" width="250" alt="Dispensary | AGP Neuro Clinic" />
                                                     </div>
                                                     <div class="slide">
-                                                        <img src="/img/carousel/IMG-20240615-WA0003.jpg" height="100" width="250" alt="" />
+                                                        <img src="/img/carousel/IMG-20240615-WA0003.jpg" height="100" width="250" alt="Dr. Arun Gokul Pon - Neurologist | AGP Neuro Clinic" />
                                                     </div>
                                                     <div class="slide">
-                                                        <img src="/img/carousel/IMG-20240615-WA0004.jpg" height="100" width="250" alt="" />
+                                                        <img src="/img/carousel/IMG-20240615-WA0004.jpg" height="100" width="250" alt="Pharmacy | AGP Neuro Clinic" />
                                                     </div>
                                                     <div class="slide">
-                                                        <img src="/img/carousel/IMG-20240615-WA0005.jpg" height="100" width="250" alt="" />
+                                                        <img src="/img/carousel/IMG-20240615-WA0005.jpg" height="100" width="250" alt="Consulting | AGP Neuro Clinic" />
                                                     </div>
                                                     <div class="slide">
-                                                        <img src="/img/carousel/IMG-20240615-WA0006.jpg" height="100" width="250" alt="" />
+                                                        <img src="/img/carousel/IMG-20240615-WA0006.jpg" height="100" width="250" alt="Consulting Check-Up | AGP Neuro Clinic" />
                                                     </div>
                                                 </div>
                                             </div>
@@ -4779,6 +4775,7 @@
                                                             <figure class="wpb_wrapper vc_figure">
                                                                 <div
                                                                     class="vc_single_image-wrapper   vc_box_border_grey">
+                                                                    <!-- MAIN IMAGE -->
                                                                     <img class="vc_single_image-img "
                                                                         src="./img/neurologist.png" width="515"
                                                                         height="552" alt="Neurologist in Nagercoil"
@@ -4871,6 +4868,8 @@
                                 <h2 style="text-align:center;font-size:24px;line-height:36px;color:#ffffff;font-family:'Saira',Arial,Helvetica;font-weight:400;"
                                     class="tm-custom-heading vc_custom_1578644726840">Call
                                     us at: +91 8300044644</h2>
+                                <h3 style="text-align:center;font-size:16px;line-height:36px;color:#ffffff;font-family:'Saira',Arial,Helvetica;font-weight:400;"
+                                    class="tm-custom-heading vc_custom_1578644726840">Address: AGP Neuro Clinic, 18/25 A-1, Rajakamanagalam Road, Karavilai, Kanyakumari District, Tamil Nadu, India - 629201</h3>
                             </div>
                         </div>
                     </div>
